validate field content in field api
